infrastructure/kube/keep-prd/monitoring/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "gce"
    # The static IP has to be created with the following command:
    # `gcloud compute addresses create keep-monitoring-ingress --global`
    kubernetes.io/ingress.global-static-ip-name: "keep-monitoring-ingress"
    networking.gke.io/managed-certificates: monitoring-cert
spec:
  defaultBackend:
    service:
      name: grafana
      port:
        number: 3000
  rules:
    - http:
        paths:
          - path: "/grafana"
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
